fixed page refesh of dark mode feature

--- a/FE/shopapp-angular/src/app/detail-product/detail-product.component.scss
+++ b/FE/shopapp-angular/src/app/detail-product/detail-product.component.scss
@@ -1,5 +1,5 @@
 .intro-section{
-    color: white;
+    // color: white;
     padding: 20px;
     text-align: center;
 }
@@ -28,11 +28,11 @@
     object-fit: cover;
 }
 .thumbnail-item.active img{
-    border: 2px solid #f1f1f1;
+    border: 2px solid;
 }
 .product-details{
     padding: 20px;
-    color: white;
+    // color: white;
 }
 .product-actions{
     display: flex;
@@ -44,7 +44,7 @@
     margin-right: 10px;
 }
 .border-wrapper{
-    border: 1px solid white;
+    border: 1px solid;
 }
 .product-quanlity{
     display: flex;
@@ -55,7 +55,8 @@
 .product-quanlity button{
     background-color: transparent;
     border: none;
-    color: white;
+    // color: white;
+    color: inherit;
     font-size: 16px;
     align-items: center;
     cursor: pointer;
@@ -65,7 +66,8 @@
     border: none;
     width: 40px;
     text-align: center;
-    color: white;
+    // color: white;
+    color: inherit;
     font-size: 16px;
     margin: 0 10px;
 }
