--- a/FE/shopapp-angular/src/app/footer/footer.component.scss
+++ b/FE/shopapp-angular/src/app/footer/footer.component.scss
@@ -1,3 +1,3 @@
 .product-description{
-    color:rgb(173,178,203);
+    // color:rgb(173,178,203);
 }
